A/anchore-admission-controller-yKMyMHvuxarL/anchore-admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-anchore-admission-controller
  labels:
    app.kubernetes.io/name: anchore-admission-controller
    helm.sh/chart: anchore-admission-controller-0.3.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.3.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: anchoreadmissioncontroller
  selector:
    app.kubernetes.io/name: anchore-admission-controller
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-anchore-admission-controller
  labels:
    app.kubernetes.io/name: anchore-admission-controller
    helm.sh/chart: anchore-admission-controller-0.3.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.3.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: anchore-admission-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anchore-admission-controller
        helm.sh/chart: anchore-admission-controller-0.3.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 0.3.0
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-anchore-admission-controller
      volumes:
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: anchore-admission-controller-certs
        - name: controller-config
          configMap:
            name: release-name-controller-config
        - name: anchore-auth
          secret:
            secretName: release-name-anchore-admission-controller
      containers:
        - name: anchore-admission-controller
          image: anchore/kubernetes-admission-controller:v0.3.0
          imagePullPolicy: IfNotPresent
          command:
            - /anchore-kubernetes-admission-controller
            - --audit-log-path=-
            - --tls-cert-file=/var/serving-cert/tls.crt
            - --tls-private-key-file=/var/serving-cert/tls.key
            - --v=3
            - --secure-port=443
          ports:
            - containerPort: 443
          readinessProbe:
            httpGet:
              path: /healthz
              port: 443
              scheme: HTTPS
          volumeMounts:
            - mountPath: /var/serving-cert
              name: serving-cert
              readOnly: true
            - mountPath: /config
              name: controller-config
            - mountPath: /credentials
              name: anchore-auth
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: anchore-admission-controller-admission.anchore.io
  labels:
    app.kubernetes.io/name: anchore-admission-controller
    helm.sh/chart: anchore-admission-controller-0.3.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.3.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: anchore-admission-controller-admission.anchore.io
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/admission.anchore.io/v1beta1/imagechecks
    rules:
      - apiGroups:
          - ""
          - apps
          - batch
        apiVersions:
          - '*'
        operations:
          - CREATE
        resources:
          - pods
          - deployments
          - replicasets
          - statefulsets
          - jobs
          - cronjobs
          - daemonsets
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: exclude.admission.anchore.io
          operator: NotIn
          values:
            - "true"
